Fix Z-Index : (
Menu Z-Index should less than 100

--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ html {
     border-radius: 30rem 30rem 15rem 15rem;
     box-shadow: 0.1rem 0.1rem 0.1rem #000, -0.1rem -0.1rem 0.1rem #000;
     cursor: pointer;
-    z-index: 100;
+    z-index: 99;
     transition: top 0.5s 0.2s;
 }
 
